# clauncher_lib

./: .gitignore  CMakeLists.txt  README.md  cpp_build.sh  cpp_lib_build.sh  cpp_lib_get.sh  cpp_lib_getter.sh
external_libs/: build_ctcp.sh
include/: clauncher-client.hpp  clauncher-server.hpp  clauncher-supply.hpp
libs/: lib_builder.sh  lib_getter.sh
source/: clauncher-client-impl.hpp  clauncher-client.cpp  clauncher-server-impl.hpp  clauncher-server-runner.cpp  clauncher-server.cpp  clauncher-supply.cpp  clauncher_client_exec.cpp  launch_agent.cpp
